# cpp_project_structure

./: .bashrc  CMakeLists.txt  README.md
src/: main.cpp
